--- a/Testy/Testy.vcxproj.filters
+++ b/Testy/Testy.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="main-test.cpp">
       <Filter>Pliki źródłowe</Filter>
     </ClCompile>
+    <ClCompile Include="..\Kakuro1\PoledoWpisania.cpp">
+      <Filter>Pliki źródłowe</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\Kakuro1\PoledoWpisania.h">
+      <Filter>Pliki nagłówkowe</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
