--- a/Kakuro1/Kakuro1.vcxproj.filters
+++ b/Kakuro1/Kakuro1.vcxproj.filters
@@ -62,5 +62,8 @@
     <ClInclude Include="PoleBlanc.h">
       <Filter>Pliki nagłówkowe</Filter>
     </ClInclude>
+    <ClInclude Include="AbhayaLibreBoldFont.hpp">
+      <Filter>Pliki nagłówkowe</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
